--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Visite Specialistiche - Cecire | Cicoria | Falcone</h1>
+        <h1>Visite Specialistiche</h1>
     </div>
 
     <div class="container">
